<resources>
    <string name="app_name">ShiftSummer2023</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="female">Female</string>
    <string name="genderless">Genderless</string>
    <string name="male">Male</string>
    <string name="error_try_again">Try again</string>
    <string name="error">Error</string>

    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
</resources>

